# chronos

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Justfile  README.md  create-issues.sh  create_issues.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/report-failure/: action.yml
.github/actions/setup-llvm/: action.yml
.github/workflows/: auto-tag.yml  backfill-releases.yml  build.yml  ci.yml  delete-merged-branch.yml  release.yml
docs/: refactor-review-2026-03.md
src/: actions.cpp  actions.hpp  actions.ixx  alarm.hpp  alarm_dialog.cpp  alarm_dialog.hpp  app.hpp  app.ixx  assert.hpp  config.hpp  config.ixx  config_io.cpp  config_io.hpp  config_io.ixx  config_serial.cpp  config_serial.hpp  debug.hpp  debug.ixx  dialog_style.cpp  dialog_style.hpp  dpi.hpp  dpi.ixx  dwm_fwd.hpp  encoding.cpp  encoding.hpp  encoding.ixx  formatting.cpp  formatting.hpp  formatting.ixx  gdi.hpp  gdi.ixx  geometry.hpp  geometry.ixx  icon.hpp  icon.ixx  input.hpp  input.ixx  input_core.cpp  input_core.hpp  input_core.ixx  (+62 more)
tests/: test_actions.cpp  test_actions_adjust.cpp  test_actions_dispatch.cpp  test_actions_stopwatch.cpp  test_actions_timer.cpp  test_config.cpp  test_encoding.cpp  test_formatting.cpp  test_layout.cpp  test_pomodoro.cpp  test_stopwatch.cpp  test_timer.cpp
